; ModuleID = '/home/carl/AnghaBench/esp-idf/components/pthread/extr_pthread.c_esp_pthread_get_cfg.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/pthread/extr_pthread.c_esp_pthread_get_cfg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_pthread_cfg_key = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@ESP_ERR_NOT_FOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_pthread_get_cfg(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32, i32* @s_pthread_cfg_key, align 4
  %6 = call i32* @pthread_getspecific(i32 %5)
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %10, align 4
  %12 = load i32*, i32** %3, align 8
  store i32 %11, i32* %12, align 4
  %13 = load i32, i32* @ESP_OK, align 4
  store i32 %13, i32* %2, align 4
  br label %18

14:                                               ; preds = %1
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @memset(i32* %15, i32 0, i32 4)
  %17 = load i32, i32* @ESP_ERR_NOT_FOUND, align 4
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %14, %9
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32* @pthread_getspecific(i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
